# HaAgent

./: .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml  skills-lock.json
.github/workflows/: ci.yml
docs/: active-rules-summary.md  context-engineering-on-demand-injection-guide.md  context-selection-module-deepening-plan.md  harness-engineering-implementation-assessment.md  memory-system-issues-and-improvement-notes.md  real-agent-technical-plan.md  test-value-audit.md  tui-experience-audit.md  tui-first-version-design.md  unresolved-risks-and-roadmap.md
docs/schemas/: providers-v4.schema.json
docs/superpowers/plans/: 2026-07-04-multi-agent-capability-roadmap.md
docs/superpowers/specs/: 2026-07-04-multi-agent-capability-roadmap-design.md
examples/evals/: code_run.json  file_read.json  file_write.json  guardrail.json  manifest.json  session_working_state.json
examples/tasks/: openai_chat_edit_smoke.yaml  openai_chat_file_read_smoke.yaml  openai_tool_call_smoke.yaml  personal_assistant_examples.yaml
examples/workspaces/file_read_smoke/: notes.txt
src/agent_foundry/: __init__.py  episode.py  model_gateway.py  orchestrator.py  states.py  task.py  tools.py
src/agentfoundry/: cli.py
src/agentfoundry/context/: builder.py  manifest.py
src/agentfoundry/docs/: EVAL_CASE_SCHEMA.md  REAL_LLM_SMOKE.md
src/agentfoundry/models/: gateway.py
src/agentfoundry/runtime/: command.py  episode.py  episode_validator.py  eval_export.py  (+4 more)
src/haagent/: cli.py  cli_commands.py  cli_inspect.py  cli_parser.py  cli_render.py  cli_runtime.py
tests/: conftest.py  test_assistant_service.py  test_chat_turn.py  test_chat_turn_runner.py  test_cli.py  test_cli_chat.py  test_cli_eval.py  test_cli_export_eval.py  test_cli_inspect.py  test_cli_personal_assistant.py  test_cli_run.py  test_cli_smoke.py  test_command.py  test_context_builder.py  test_context_compaction.py  test_context_messages.py  test_context_source_catalog.py  test_credentials.py  test_deterministic_search_workflow.py  test_dogfood.py  test_episode_validator.py  test_episode_writer.py  test_eval_export.py  test_eval_runner.py  test_execution_boundary.py  test_failure_taxonomy.py  test_human_interaction_resolver.py  test_loop_guidance.py  test_memory_extraction.py  test_memory_retrieval.py  test_model_gateway.py  test_observation_compaction.py  test_orchestrator.py  test_orchestrator_refactor.py  test_policy.py  test_real_task_smoke.py  test_run_turns.py  test_safety_guard.py  test_skills_loader.py  test_task_loading.py  (+8 more)
tests/e2e/: test_dogfood.py  test_real_model_dogfood.py  test_real_task_smoke.py
tests/extended/: test_cli_check.py  test_cli_eval.py  test_cli_export_eval.py  test_cli_inspect.py  test_eval_export.py  test_eval_runner.py
tests/support/: channel_adapter.py  episode_packages.py  model_credentials.py
tests/tui/: support.py  test_app.py  test_app_misc.py  test_channels.py  test_commands_slash.py  test_connect_models.py  test_conversation.py  test_file_refs.py  test_images.py  test_interaction.py  test_memory.py  test_permissions_paths.py  test_schedule_background_service.py  test_schedule_host_worker.py  test_schedule_runs.py  test_schedules_overlay.py  test_sessions.py  test_status_theme.py  test_task_progress_events.py  test_tools_details.py  test_workspace_picker.py
tests/unit/: test_pytest_environment.py
(+532 files in other folders)
