[project]
name = "haagent"
version = "0.1.0"
description = "Local personal AI assistant runtime."
requires-python = ">=3.11"
dependencies = [
    "pyyaml>=6.0.0",
]

[project.scripts]
haagent = "haagent.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/haagent"]

[tool.pytest.ini_options]
addopts = ["--strict-markers"]
pythonpath = ["src"]
testpaths = ["tests"]
markers = [
    "unit: pure logic tests with narrow scope",
    "contract: schema, trace, package, provider payload, or CLI output contract tests",
    "workflow: cross-module runtime or CLI workflow tests",
    "slow: timeout or intentionally slower tests",
    "smoke: smoke-style tests that should be easy to deselect during fast local runs",
    "real_llm: manual tests that call a real model and are skipped unless --real-llm is provided",
]
