[project]
name = "haagent"
version = "0.1.0"
description = "Local personal AI assistant runtime."
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.12.0",
    "httpx>=0.27.0",
    "keyring>=25.0.0",
    "mcp>=1,<2",
    "Pillow>=10.0.0",
    "python-dateutil>=2.9.0.post0,<3",
    "pyyaml>=6.0.0",
    "rich>=13.0.0",
    "textual>=0.80.0",
    "tzdata>=2025.2",
    "uniseg>=0.10.1,<1.0",
]

[project.optional-dependencies]
# 微信文本阶段：终端 ASCII 二维码（扫码登录 UX）
channels-weixin = [
    "qrcode>=7.4.2",
]

[project.scripts]
haagent = "haagent.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-xdist>=3.6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/haagent"]

[tool.pytest.ini_options]
addopts = ["--strict-markers", "-n", "auto", "--dist=loadfile", "-q"]
pythonpath = ["src"]
testpaths = ["tests"]
markers = [
    "slow: tests that start the Textual app or run real agent workflows; deselect with -m \"not slow\" for fast local runs",
    "real_llm: manual tests that call a real model and are skipped unless --real-llm is provided",
    "weixin_e2e: real Weixin iLink sandbox; requires --run-weixin-e2e and HAAGENT_WEIXIN_BOT_TOKEN",
]
